@@ -4,7 +4,6 @@ import com.skyfalling.mousika.eval.context.RuleContext;
 import com.skyfalling.mousika.eval.result.EvalResult;
 import lombok.Getter;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -18,19 +17,20 @@ import java.util.stream.Collectors;
 @Getter
 public class AndNode implements RuleNode {
 
-    private List<RuleNode> nodes = new ArrayList<>();
+    private final List<RuleNode> nodes;
 
     /**
      * 多个节点条件取且
      */
     public AndNode(RuleNode... nodes) {
-        this.nodes.addAll(Arrays.asList(nodes));
+        this.nodes = List.copyOf(Arrays.asList(nodes));
     }
 
     @Override
     public RuleNode and(RuleNode node) {
-        this.nodes.add(node);
-        return this;
+        RuleNode[] combined = Arrays.copyOf(nodes.toArray(new RuleNode[0]), nodes.size() + 1);
+        combined[combined.length - 1] = node;
+        return new AndNode(combined);
     }
 
     @Override
