@@ -5,7 +5,6 @@ import com.skyfalling.mousika.eval.result.EvalResult;
 import com.skyfalling.mousika.utils.Constants;
 import lombok.Getter;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -25,7 +24,7 @@ public class SerNode implements RuleNode {
     /**
      * 按执行顺序保存的子节点。
      */
-    private List<RuleNode> nodes = new ArrayList<>();
+    private final List<RuleNode> nodes;
 
 
     /**
@@ -34,7 +33,7 @@ public class SerNode implements RuleNode {
      * @param nodes 按执行顺序排列的子节点
      */
     public SerNode(RuleNode... nodes) {
-        this.nodes.addAll(Arrays.asList(nodes));
+        this.nodes = List.copyOf(Arrays.asList(nodes));
     }
 
 
@@ -45,8 +44,9 @@ public class SerNode implements RuleNode {
      * @return 当前串行节点
      */
     public SerNode next(RuleNode node) {
-        this.nodes.add(node);
-        return this;
+        RuleNode[] combined = Arrays.copyOf(nodes.toArray(new RuleNode[0]), nodes.size() + 1);
+        combined[combined.length - 1] = node;
+        return new SerNode(combined);
     }
 
     /**
